--- a/devops/faucet/Dockerfile
+++ b/devops/faucet/Dockerfile
@@ -3,10 +3,10 @@
 # Choose from https://hub.docker.com/_/node/
 FROM node:12.14.1-alpine
 
-RUN yarn global add @cosmjs/faucet@0.22.2
+RUN yarn global add @cosmjs/faucet@0.24.0-alpha.9
 
 # Check it exists
-RUN /usr/local/bin/cosmwasm-faucet version
+RUN /usr/local/bin/cosmos-faucet version
 
 EXPOSE 8000
-CMD ["/usr/local/bin/cosmwasm-faucet", "start", "http://localhost:1317"]
+CMD ["/usr/local/bin/cosmos-faucet", "start", "http://localhost:1317"]
